separacion de archivo java

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         </form>
         <ul id="taskList"></ul>
     </div>
-    <script src="./js/main.js"></script>
+    <script src="./js/storage.js" type="module"></script>
+    <script src="./js/main.js" type="module"></script>
+    
 </body>
 </html>
