--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Aplicación de Tareas</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./css/main.css">
+    <script src="./js/storage.js" type="module" defer></script>
+    <script src="./js/main.js" type="module" defer></script>
 </head>
 <body>
     <div class="container">
@@ -22,8 +24,21 @@
         </form>
         <ul id="taskList"></ul>
     </div>
-    <script src="./js/storage.js" type="module"></script>
-    <script src="./js/main.js" type="module"></script>
-    
+    <div id="editModal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2>Editar Tarea</h2>
+            <form id="editTaskForm">
+                <input type="text" id="editTaskInput" placeholder="Ingrese una tarea" required>
+                <input type="text" id="editTaskDescription" placeholder="Ingrese una descripción">
+                <select id="editTaskPriority">
+                    <option value="Alta">Alta</option>
+                    <option value="Media">Media</option>
+                    <option value="Baja">Baja</option>
+                </select>
+                <button type="submit">Guardar Cambios</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
